--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 <p> Finally, I convert the board game into the <a href="http://senseis.xmp.net/?SmartGameFormat"> SGF </a> format. 
 
 <h3>Results</h3>
-<p> Gocam succesfully determined the board game state, with 100% accuracy, of 2 out of my 3 main test images. The third image was difficult because the white stones and board color were almost the same. </p>
+<p> Gocam succesfully determined the board game state, with 100% accuracy, of <a href="./images/mine/results.png"> 2 out of my 3 main test images </a>. The <a href="./images/mine/board2.png"> third image </a> was difficult because the white stones and board color were almost the same. Here are the links to SGF for the <a href="./data/board1.sgf"> first </a> and <a href="./data/overhead1.sgf"> second </a> images. </p>
+
 <h3>Further Improvements</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
