--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 <p>This was my capstone project for my Machine Learning class at Brown.</p>
 
 <h3>Abstract</h3>
-<p>Gocam provides the beginnings of a solution to a real problem: the ability to play a go game on a physical board, but record the game on a computer for playback and sharing. My Gocam program takes in an image file, and then given where the four corners of the go board are, attempts to reliably figure out the state of the board (i.e. for every grid spot, whether it is empty, black, or white). Future improvements include: Detecting the four corners automatically (I began work on this), using pixel colors to more reliably detect the white/black/no stone split, and ultimately taking in a video stream, detecting when a move is played, and then recording an entire game automatically.</p>
+<p>Gocam provides the beginnings of a solution to a real problem: the ability to play a go game on a physical board, but record the game on a computer for playback and sharing. My Gocam program takes in an image file, and then given where the four corners of the go board are, attempts to reliably figure out the state of the board (i.e. for every grid spot, whether it is empty, black, or white). Future improvements include: Detecting the four corners automatically (I began work on this), using pixel color information to more reliably detect the white/black/no stone split, and ultimately taking in a video stream, detecting when a move is played, and then recording an entire game automatically.</p>
 
 <h3>Method</h3>
 
 <p> <b> Original Image</b></p>
 <img src="./images/mine/board1.jpg"> </img>
 
-<p>First I convert the image into black and white. Then, I get the corners of the board from as input from the user. I then do a projective transformation to make the grid square and uniform. This entails creating a projective 'tform' object in matlab, mapping the the four corners to (0,0) (newImageSize,0) (newImageSize,newImageSize), and (0, newImageSize). I then crop the new image so that it contains only the board. This results in a new image (projectedImage), which contains only the board, and the game grid should now be square and uniform.</p>
+<p>First I convert the image into black and white. Then, I get the corners of the board as input from the user. I then do a projective transformation to make the grid square and uniform. This entails creating a projective 'tform' object in matlab, and mapping the the four corners to (0,0) (newImageSize,0) (newImageSize,newImageSize), and (0, newImageSize). I then crop the new image so that it contains only the board. This results in a new image (projectedImage), which contains only the board, and the game grid should now be square and uniform.</p>
 <img src="./images/mine/projectiveTransform.jpg"> </img>
 
 <p> Then, I attempt to find the edges of the actual game grid (as opposed to the entire board). I do this by first finding the edges in the image, and then finding both hough lines and hough circles from the edges in the image. Finally, I take the extreme in the top/right/bottom/left directions of all the lines and the (midpoints of the) circles, which are beyond a 5 px margin of the sides of the image (since sometimes the edge of the board still shows up after the projective transformation), and these are the edges of the grid.</p>
@@ -63,9 +63,14 @@
 <p> Gocam succesfully determined the board game state, with 100% accuracy, of <a href="./images/mine/results.png"> 2 out of my 3 main test images </a>. The <a href="./images/mine/board2.png"> third image </a> was difficult because the white stones and board color were almost the same. Here are the links to SGF files for the <a href="./data/board1.sgf"> first </a> and <a href="./data/overhead1.sgf"> second </a> images. </p>
 
 <h3>Further Improvements</h3>
-</a> </a>
+<p> First, clearly, I'd like to obtain more test images and see how robust my solution is. I plan on doing this soon. </p>
+<p> Then, I'd like to make the stone detecting more robust. I think I could use color information to more reliably detect the stones, instead of using just the brightness mangnitude. Also, with more data, I could get better estimates for upper and lower thresholds.</p>
+<p> This would take more time, but reliably detecting the edges of the board would make the entire process automatic, which would would be a huge step up. I don't think it would be incredible difficult, my main issues were extraneous edges in the image beyond the board, and perspective+stones making one or more edges not visible. Once this is done, I could make this an executable, and then potentially make it available online, so people could upload an image and get an SGF file back. </p>
+<p> Finally, the ultimate goal of this project is to take in a video stream and record an entire game. This sounds impressive, but once it works reliably for single images, it wouldn't be too hard to see if a move was made. Simply make sure nothing is moving in the video (i.e. that no one is actively making a move or pointing at the board), and then record the new state. String these all together and you'll get an SGF of the entire game. </p>
 
-<p>Created by <a href="https://github.com/vjsingh" class="user-mention">@mention</a> </p>
+<h2> Thanks for Reading! </h2>
+
+<p>Created by <a href="https://github.com/vjsingh" class="user-mention">@vjsingh</a>. If you have questions/comments/sample game images, feel free to email me at the email posted in my github account. </p>
 
       </section>
     </div>
