--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/vjsingh/gocam">View on GitHub</a>
 
           <h1 id="project_title">GoCam</h1>
-          <h2 id="project_tagline">Detects the board state of a go game given an image</h2>
+          <h2 id="project_tagline">Give me an image, and I'll give you a Go Game!</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/vjsingh/gocam/zipball/master">Download this project as a .zip file</a>
